--- a/game.html
+++ b/game.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="footer.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-
+<section class="timersection">
+  <div>Time left = <span id="timer"></span></div>
+</section>
 
 <body>
   <nav>
@@ -24,9 +26,9 @@
     </ul>
   </nav>
 
-<section class="timersection">
-  <div>Time left = <span id="timer"></span></div>
-</section>
+  <section class="timersection">
+    <div class="timer">2:35</div>
+  </section>
 
   <section class="jeux">
     <div class="jeuximgfacile card-wrapper conteneur">
