--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="lang">
-  <head>
-    <meta charset="utf-8" />
-    <title>Titre de la page</title>
-    <link rel="stylesheet" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="footer.css" />
-  </head>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -19,13 +9,12 @@
   <link rel="stylesheet" href="footer.css" />
 </head>
 
-        <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
-        <div id="myLinks">
-          <a href="index.html" class="span-1">Home</a>
-          <a href="scoreboard.html">Scores</a>
-          <a href="contact.html">Contact</a>
-          <a href="devTeam.html">Dev Team</a>
-        </div>
+<body>
+  <header class="topnav-wrapper">
+    <div class="topnav">
+      <!--Our main title, always links to the index/home page-->
+      <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
+      <!--h1 for SEO-->
 
       <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
       <div id="myLinks">
@@ -34,54 +23,41 @@
         <a href="contact.html">Contact</a>
         <a href="devTeam.html">Dev Team</a>
       </div>
-    </header>
-    <main>
-      <div class="line-toggle-bar">
-      <div class="toggle-bar">
-        <div class="toggle-lang">EN</div>
-        <div class="toggle-space"><div class="toggle-button"></div></div>
-        <div class="toggle-lang">FR</div>
-      </div>
-      </div>  
-      <section>
-        <label for="pseudo" class="span-2">Enter your pseudo :</label>
-        <input type="text" name="pseudo" />
-      </section>
 
-      <div class="central">
-        <div class="Rules">
-          <label for="rules_games" class="span-3">Rules of the game :</label><br />
-          <p class="rules">
-            <span class="span-4">You have cards face down. The aim is to find the even cards within
-            the time limit. </span><br /><br /><span class="span-5">Click on a card to flip it over and find
-            its twin. If you find the pair, the cards remain face up and you can
-            continue. </span><br />
-            <span class="span-6">If you make a mistake, the last 2 cards turned over become hidden
-            again. </span><br /><br /><span class="span-7">Increase the difficulty if you want to add pairs
-            of cards. Your score will be calculated according to the level of
-            difficulty and the time taken.</span>
-          </p>
-        </div>
-        <div class="video">
-          <iframe
-            width="400"
-            height="300"
-            src="https://www.youtube.com/embed/cwfURfGS6JA"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
+      <!-- Burger menu -->
+      <a href="javascript:void(0);" class="icon">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+  </header>
+  <main>
+    <div class="toggle-bar"></div>
+    <section>
+      <label for="pseudo">Enter your pseudo</label> :
+      <input type="text" name="pseudo" />
+    </section>
+
+    <div class="central">
+      <div class="Rules">
+        <label for="rules_games">Rules of the game :</label><br />
+        <p class="rules">
+          You have cards face down. The aim is to find the even cards within
+          the time limit. <br /><br />Click on a card to flip it over and find
+          its twin. If you find the pair, the cards remain face up and you can
+          continue. <br />
+          If you make a mistake, the last 2 cards turned over become hidden
+          again. <br /><br />Increase the difficulty if you want to add pairs
+          of cards. Your score will be calculated according to the level of
+          difficulty and the time taken.
+        </p>
+      </div>
+      <div class="video">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/cwfURfGS6JA" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
     </div>
 
-      <div class="settings">
-        <p class="settings_title"><span class="span-8">Select a difficulty mode :</span></p>
-        <br />
-        <div>
-          <input type="radio" class="easy" name="difficulty" />
-          <label for="easy" class="span-9">Easy</label>
-        </div>
 
     <div class="settings">
       <p class="settings_title">Select a difficulty mode :</p>
@@ -100,20 +76,22 @@
 
       <br />
 
-        <div>
-          <input type="radio" class="hard" name="difficulty" />
-          <label for="hard" class="span-10">Hard</label>
-        </div>
+      <div>
+        <input type="radio" class="difficulty" name="difficulty" value="hard" />
+        <label for="hard">Hard</label>
       </div>
-    </main>
-    <div class="button"><a href="game.html" class="span-11">Let's Play !!</a></div>
-    <footer>
-      <p class="p-footer">
-        HighFiveMemo by
-        <a href="devTeam.html" class="aFooter">Team HighFive</a> <span class="span-12"> - Website
-          created on Septembre 29, 2020</span>
-      </p>
-    </footer>
-    <script type="text/javascript" src="index.js"></script>
-  </body>
+
+  </main>
+
+  <div class="button"><a href="game.html">Let's Play !!</a></div>
+  <footer>
+    <p class="p-footer">
+      HighFiveMemo by
+      <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website
+      created on Septembre 29, 2020
+    </p>
+  </footer>
+  <script type="text/javascript" src="index.js"></script>
+</body>
+
 </html>
