first version, scores are correctyl ranked - still have to add dates

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -48,47 +48,47 @@
                         <p class="number1">1</p>
                         <p class="recordText">RECORD</p>
                     </div>
-                    <p class="recordScore">*****</p>
+                    <p class="score recordScore">-----</p>
                     <!--Record score-->
                 </div>
 
                 <div class="score-wrapper">
                     <div class="ranking">
                         <p class="number2">2</p>
-                        <p class="date">*****</p>
+                        <p class="date">-----</p>
                         <!--Date of the score-->
                     </div>
-                    <p class="">*****</p>
+                    <p class="score">-----</p>
                     <!--Score-->
                 </div>
 
                 <div class="score-wrapper">
                     <div class="ranking">
                         <p class="number3">3</p>
-                        <p class="date"></p>
+                        <p class="date">-----</p>
                         <!--Date of the score-->
                     </div>
-                    <p class=""></p>
+                    <p class="score">-----</p>
                     <!--Score-->
                 </div>
 
                 <div class="score-wrapper">
                     <div class="ranking">
                         <p class="number4">4</p>
-                        <p class="date"></p>
+                        <p class="date">-----</p>
                         <!--Date of the score-->
                     </div>
-                    <p class=""></p>
+                    <p class="score">-----</p>
                     <!--Score-->
                 </div>
 
                 <div class="score-wrapper">
                     <div class="ranking">
                         <p class="number5">5</p>
-                        <p class="date"></p>
+                        <p class="date">-----</p>
                         <!--Date of the score-->
                     </div>
-                    <p class=""></p>
+                    <p class="score">-----</p>
                     <!--Score-->
                 </div>
             </section>
