updated the scoreboard.js, .html and .css

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -45,7 +45,7 @@
                 <!--Example of a score line but most of the HTML will probably be injected via JS?-->
                 <div class="score-wrapper">
                     <div class="ranking">
-                        <p class="number1">1</p>
+                        <!-- <p class="number1">1</p> -->
                         <p class="recordText">RECORD</p>
                         <p class="date">-----</p>
                     </div>
@@ -94,6 +94,7 @@
                 </div>
             </section>
 
+            <div class="currentScore"></div>
             <!--Not using an actual button because they're annnoying to style in css-->
             <div class="button"><a href="#game">Play again!</a></div>
         </div>
