--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
     <div class="popupWin overlay">
       <div class="popup">
         <h2>Congratulations 🎉</h2>
-        <a class="close" href="#">×</a>
+        <a class="close-win close">×</a>
         <div class="content-1">Congratulations you're a winner 🎉🎉</div>
         <div class="content-2">
           <p class="finalMove"></p>
@@ -45,9 +45,11 @@
     <div class="popupLoose overlay">
       <div class="popup">
         <h2>You loose 👎</h2>
-        <a class="close" href="#">×</a>
+        <a class="close-loose close">×</a>
         <div class="content-1">Boouuh you're a LOOSER 👎👎</div>
-        <button class="allScore">All your score</button>
+        <div class="content-2">
+          <button class="allScore">All your score</button>
+        </div>
       </div>
     </div>
 
