small modifications on the scoreboard pages mainly

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -92,11 +92,59 @@
                     <p class="score">-----</p>
                     <!--Score-->
                 </div>
+                <div class="score-wrapper">
+                    <div class="ranking">
+                        <p class="number6">6</p>
+                        <p class="date">-----</p>
+                    </div>
+                    <p class="score recordScore">-----</p>
+                    <!--Record score-->
+                </div>
+
+                <div class="score-wrapper">
+                    <div class="ranking">
+                        <p class="number7">7</p>
+                        <p class="date">-----</p>
+                        <!--Date of the score-->
+                    </div>
+                    <p class="score">-----</p>
+                    <!--Score-->
+                </div>
+
+                <div class="score-wrapper">
+                    <div class="ranking">
+                        <p class="number8">8</p>
+                        <p class="date">-----</p>
+                        <!--Date of the score-->
+                    </div>
+                    <p class="score">-----</p>
+                    <!--Score-->
+                </div>
+
+                <div class="score-wrapper">
+                    <div class="ranking">
+                        <p class="number9">9</p>
+                        <p class="date">-----</p>
+                        <!--Date of the score-->
+                    </div>
+                    <p class="score">-----</p>
+                    <!--Score-->
+                </div>
+
+                <div class="score-wrapper">
+                    <div class="ranking">
+                        <p class="number10">10</p>
+                        <p class="date">-----</p>
+                        <!--Date of the score-->
+                    </div>
+                    <p class="score">-----</p>
+                    <!--Score-->
+                </div>
             </section>
 
             <div class="currentScore"></div>
             <!--Not using an actual button because they're annnoying to style in css-->
-            <div class="button"><a href="#game">Play again!</a></div>
+            <div class="button"><a href="game.html">Play again!</a></div>
         </div>
     </div>
 
