--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <ul>
-        <li class="navigation"><a href="" title="exit">HighFiveMemo</a></li>
+        <li class="navigation"><a href="index.html" title="exit">HighFiveMemo</a></li>
       </ul>
       <ul>
         <li>
@@ -57,7 +57,6 @@
   <section class="replaysection">
     <button class="replay">Replay</button>
   </section>
-  <script src="timer.js"></script>
   <script type="text/javascript" src="game.js"></script>
 </body>
 
