modif responsive in home page + modif header in dev team page + add footer in all pages

--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,11 @@
         </div>
       </form>
     </section>
+    <footer>
+      <p class="p-footer">
+      HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
+      </p>
+    </footer>
     <!-- lien pour le js du header -->
     <script type="text/javascript" src="contact.js"></script>
   </body>
