--- a/devTeam.html
+++ b/devTeam.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <title>Dev Team</title>
     <meta name="Description" content="Developers team.">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="devTeam.css">
-    <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="topnav-wrapper">
         <div class="topnav">
-            <!--Our main title, always links to the index/home page-->
-            <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
-            <!--h1 for SEO-->
+          <!--Our main title, always links to the index/home page-->
+          <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
+          <!--h1 for SEO-->
     
-            <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
-            <div id="myLinks">
-                <a href="index.html">Home</a>
-                <a href="scoreboard.html">Scores</a>
-                <a href="contact.html">Contact</a>
-                <a href="devTeam.html">Dev Team</a>
-            </div>
+          <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
+          <div id="myLinks">
+            <a href="index.html" class="span-1">Home</a>
+            <a href="scoreboard.html">Scores</a>
+            <a href="contact.html">Contact</a>
+            <a href="devTeam.html">Dev Team</a>
+          </div>
     
-            <!-- Burger menu -->
-            <a href="javascript:void(0);" class="icon">
-                <i class="fa fa-bars"></i>
-            </a>
+          <!-- Burger menu -->
+          <a href="javascript:void(0);" class="icon">
+            <i class="fa fa-bars"></i>
+          </a>
         </div>
-    </header>
+      </header>
     <main>
         <h2>
             Team High Five
@@ -42,7 +44,7 @@
                 </picture>
                 <h3>
                     Matt DAMON<br>
-                    Age - 27<br>
+                    Age - 27<br><br>
                     <span class="funfact">"No more playing the tough guys on screen..."</span>
                 </h3>
             </li>
@@ -53,7 +55,7 @@
                 </picture>
                 <h3>
                     Christophe PARENT<br>
-                    Age - 32<br>
+                    Age - 32<br><br>
                     <span class="funfact">"Did you say JavaScript ??"</span>  😱😬😥
                 </h3>
             </li>
@@ -64,7 +66,7 @@
                 </picture>
                 <h3>
                     Guillem DARDILL<br>
-                    Age - 32<br>
+                    Age - 32<br><br>
                     <span class="funfact">"It is pronounced "Guillem" with two "L" as in <span class="span-couille">couille</span> nouille."<span>
                 </h3>
             </li>
@@ -75,7 +77,7 @@
                 </picture>
                 <h3 class="brieuc">
                     Brieuc QUERTIER<br>
-                    Age - 28<br>
+                    Age - 28<br><br>
                     <span class="funfact">"I was quite bored as the boss of my cookie company. So I started to develop."</span>
                 </h3>
             </li>
@@ -86,7 +88,7 @@
                 </picture>
                 <h3>
                     Julien PELLATTIERO<br>
-                    Age - 28<br>
+                    Age - 28<br><br>
                     <span class="funfact">"One day I accidentally opened the inspector, and I got a nosebleed."<span>
                 </h3>
             </li>
@@ -98,6 +100,5 @@
         </p>
     </footer>
 <script type="text/javascript" src="devTeam.js"></script>
-<script type="text/javascript" src="header.js"></script>
 </body>
 </html>
