--- a/game.html
+++ b/game.html
@@ -70,6 +70,11 @@
   <section class="replaysection">
     <button class="replay">Replay</button>
   </section>
+  <footer>
+    <p class="p-footer">
+    HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
+    </p>
+  </footer>
   <script src="timer.js"></script>
   <script type="text/javascript" src="game.js"></script>
 
