--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Hig Five Memo - Home</title>
+  <title>High Five Memo - Home</title>
   <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="footer.css" />
 </head>
-
 <body>
   <header class="topnav-wrapper">
     <div class="topnav">
@@ -38,7 +37,7 @@
         <div class="toggle-lang">FR</div>
       </div>
       </div>
-    <section>
+    <section class="enterPseudo">
       <label for="pseudo" class="span-2">Enter your pseudo :</label>
       <input type="text" name="pseudo" />
     </section>
@@ -90,7 +89,7 @@
   </main>
 
   <div class="button"><a href="game.html" class="span-11">Let's Play !!</a></div>
-  <footer>
+  <footer class="display">
     <p class="p-footer">
       HighFiveMemo by
       <a href="devTeam.html" class="aFooter">Team HighFive</a> <span class="span-12"> - Website
