--- a/scoreboard.html
+++ b/scoreboard.html
@@ -97,15 +97,11 @@
             <div class="button"><a href="#game">Play again!</a></div>
         </div>
     </div>
-
     <footer>
         <p class="p-footer">
-            HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on September
-            29, 2020
+        HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
         </p>
     </footer>
-
     <script type="text/javascript" src="header.js"></script>
 </body>
-
 </html>
