--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <a href="http://www.freepik.com">Designed by slidesgo / Freepik</a>
     <nav>
       <ul>
         <li class="navigation"><a href="index.html" title="exit">HighFiveMemo</a></li>
