--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
       <br />
       <div>
         <input type="radio" class="difficulty" name="difficulty" value="easy" />
-        <label for="easy" class="span-9">Easy</label>
+        <label for="easy" class="span-setting">Easy</label>
       </div>
 
       <br />
 
       <div>
         <input type="radio" class="difficulty" name="difficulty" value="normal" />
-        <label for="normal">Normal</label>
+        <label for="normal" class="span-setting">Normal</label>
       </div>
 
       <br />
 
       <div>
         <input type="radio" class="difficulty" name="difficulty" value="hard" />
-        <label for="hard" class="span-10">Hard</label>
+        <label for="hard" class="span-setting">Hard</label>
       </div>
 
   </main>
@@ -97,7 +97,7 @@
     <p class="p-footer">
       HighFiveMemo by
       <a href="devTeam.html" class="aFooter">Team HighFive</a> <span class="span-12"> - Website
-        created on Septembre 29, 2020</span>
+        created on Septembre 29, 2020</span><a href="http://www.freepik.com">Designed by slidesgo / Freepik</a>
     </p>
   </footer>
   <script type="text/javascript" src="index.js"></script>
