--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="footer.css" />
 </head>
 <body>
+  <div class="page">
   <header class="topnav-wrapper">
     <div class="topnav">
       <!--Our main title, always links to the index/home page-->
@@ -92,7 +93,7 @@
 
   <div class="button"><a href="game.html" class="span-11">Let's Play !!</a></div>
   <div class="alert">You need to select a difficulty level</div>
-
+</div>
   <footer>
     <p class="p-footer">
       HighFiveMemo by
