--- a/game.html
+++ b/game.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <a href="http://www.freepik.com">Designed by slidesgo / Freepik</a>
     <nav>
       <ul>
         <li class="navigation"><a href="index.html" title="exit">HighFiveMemo</a></li>
@@ -61,7 +60,7 @@
   <footer>
     <p class="p-footer">
     HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
-    </p>
+    <a href="http://www.freepik.com">Designed by slidesgo / Freepik</a></p>
   </footer>
   <script type="text/javascript" src="game.js"></script>
 </body>
