modif css harmonisation contact, devteam, game, index

--- a/devTeam.html
+++ b/devTeam.html
@@ -12,6 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="page">
     <header class="topnav-wrapper">
         <div class="topnav">
           <!--Our main title, always links to the index/home page-->
@@ -94,6 +95,7 @@
             </li>
         </ul>
     </main>
+</div>
     <footer>
         <p class="p-footer">
         HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
