--- a/contact.html
+++ b/contact.html
@@ -13,72 +13,76 @@
     <title>Contact</title>
   </head>
   <body>
-    <header class="topnav-wrapper">
-      <div class="topnav">
-        <!--Our main title, always links to the index/home page-->
-        <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
-        <!--h1 for SEO-->
+    <div class="page">
+      <header class="topnav-wrapper">
+        <div class="topnav">
+          <!--Our main title, always links to the index/home page-->
+          <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
+          <!--h1 for SEO-->
 
-        <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
-        <div id="myLinks">
-          <a href="index.html">Home</a>
-          <a href="scoreboard.html">Scores</a>
-          <a href="contact.html">Contact</a>
-          <a href="devTeam.html">Dev Team</a>
+          <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
+          <div id="myLinks">
+            <a href="index.html">Home</a>
+            <a href="scoreboard.html">Scores</a>
+            <a href="contact.html">Contact</a>
+            <a href="devTeam.html">Dev Team</a>
+          </div>
+
+          <!-- Burger menu -->
+          <a href="javascript:void(0);" class="icon">
+            <i class="fa fa-bars"></i>
+          </a>
         </div>
+      </header>
 
-        <!-- Burger menu -->
-        <a href="javascript:void(0);" class="icon">
-          <i class="fa fa-bars"></i>
-        </a>
-      </div>
-    </header>
+      <section class="formulaire">
+        <form action="" method="POST">
+          <div class="formulaire">
+            <label for="mail"></label>
+            <input
+              type="email"
+              id="mail"
+              name="user_mail"
+              placeholder="Your email"
+              required="required"
+            />
+          </div>
 
-    <section class="formulaire">
-      <form action="" method="POST">
-        <div class="formulaire">
-          <label for="mail"></label>
-          <input
-            type="email"
-            id="mail"
-            name="user_mail"
-            placeholder="Your email"
-            required="required"
-          />
-        </div>
+          <div class="formulaire">
+            <label for="topic"></label>
 
-        <div class="formulaire">
-          <label for="topic"></label>
+            <select name="topicType" id="topic">
+              <option value="">Please choose a topic--</option>
+              <option value="bug">Bug</option>
+              <option value="features">Suggested features</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
 
-          <select name="topicType" id="topic">
-            <option value="">Please choose a topic--</option>
-            <option value="bug">Bug</option>
-            <option value="features">Suggested features</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
+          <div class="formulaire">
+            <label for="message"></label>
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+              placeholder="Your message..."
+            ></textarea>
+          </div>
 
-        <div class="formulaire">
-          <label for="message"></label>
-          <textarea
-            name="message"
-            id="message"
-            cols="30"
-            rows="10"
-            placeholder="Your message..."
-          ></textarea>
-        </div>
-
-        <div class="formulaire">
-          <button type="submit">
-            <p class="sendButton">Send !</p>
-          </button>
-        </div>
-      </form>
-    </section>
+          <div class="formulaire">
+            <button type="submit">
+              <p class="sendButton">Send !</p>
+            </button>
+          </div>
+        </form>
+      </section>
+    </div>
     <footer>
       <p class="p-footer">
-      HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
+        HighFiveMemo by
+        <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website
+        created on Septembre 29, 2020
       </p>
     </footer>
     <!-- lien pour le js du header -->
