--- a/game.html
+++ b/game.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Game</title>
-    <link rel="stylesheet" href="game.css" />
-    <link rel="stylesheet" href="footer.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Game</title>
+  <link rel="stylesheet" href="game.css" />
+  <link rel="stylesheet" href="footer.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+  <div class="page">
     <nav>
       <ul>
         <li class="navigation"><a href="index.html" title="exit">HighFiveMemo</a></li>
@@ -15,7 +18,7 @@
       <ul>
         <li>
           <a href="index.html" title="exit">
-            <img src="images/exit1.png" alt="exit" width="70px"/>
+            <img src="images/exit1.png" alt="exit" width="70px" />
           </a>
         </li>
       </ul>
@@ -57,10 +60,13 @@
   <section class="replaysection">
     <button class="replay">Replay</button>
   </section>
+  </div>
   <footer>
     <p class="p-footer">
-    HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
-    <a href="http://www.freepik.com">Designed by slidesgo / Freepik</a></p>
+      HighFiveMemo by
+      <a href="devTeam.html" class="aFooter">Team HighFive</a> <span class="span-12"> - Website
+        created on October, 9 2020</span> - <a href="http://www.freepik.com">Background image by slidesgo / Freepik</a>
+    </p>
   </footer>
   <script type="text/javascript" src="game.js"></script>
 </body>
