--- a/scoreboard.html
+++ b/scoreboard.html
@@ -44,12 +44,14 @@
             <section class="scoreboard">
                 <!--Example of a score line but most of the HTML will probably be injected via JS?-->
                 <div class="score-wrapper">
+                    <p class="recordText">RECORD</p>
                     <div class="ranking">
                         <!-- <p class="number1">1</p> -->
-                        <p class="recordText">RECORD</p>
+
                         <p class="date">-----</p>
+                        <p class="score recordScore">-----</p>
                     </div>
-                    <p class="score recordScore">-----</p>
+
                     <!--Record score-->
                 </div>
 
@@ -149,10 +151,14 @@
     </div>
     <footer>
         <p class="p-footer">
-        HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
+            HighFiveMemo by
+            <a href="devTeam.html" class="aFooter">Team HighFive</a> <span class="span-12"> - Website
+                created on October, 9 2020</span> - <a href="http://www.freepik.com">Background image by slidesgo /
+                Freepik</a>
         </p>
     </footer>
     <script type="text/javascript" src="header.js"></script>
     <script type="text/javascript" src="scoreboard.js"></script>
 </body>
+
 </html>
