finalisation pré-présentation

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </div>
       </div>
       <section class="enterPseudo">
-        <label for="pseudo" class="span-2">Enter your pseudo :</label>
-        <input id="pseudo" type="text" name="pseudo" placeholder="anonymous" />
+        <label for="pseudo" class="span-2">Enter your pseudo </label>
+        <input id="pseudo" type="text" name="pseudo" placeholder=" Anonymous" />
       </section>
 
       <div class="central">
         <div class="Rules">
-          <label for="rules_games" class="span-3">Rules of the game :</label><br />
+          <label for="rules_games" class="span-3">Rules of the game </label><br />
           <p class="rules">
             <span class="span-4">You have cards face down. The aim is to find the even cards within
               the time limit. </span><br /><br /><span class="span-5">Click on a card to flip it over and find
@@ -61,9 +61,7 @@
           </p>
         </div>
         <div class="video">
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/cwfURfGS6JA" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+                      <iframe width="400" height="300" src="https://www.youtube.com/embed/izUUUr-iiQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
 
